Fix partials _form

--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -5,12 +5,12 @@
 
   <p>
     <%= form.label :title %><br>
-    <%= form.text_field :title, id: :test_title %>
+    <%= form.text_field :title %>
   </p><br>
 
   <p>
     <%= form.label :level %><br>
-    <%= form.number_field :level, id: :test_level %>
+    <%= form.number_field :level %>
   </p>
 
   <p>
