--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -5,7 +5,7 @@
 
   <p>
     <%= form.label :body %><br>
-    <%= form.text_field :body, id: :question_body %>
+    <%= form.text_field :body %>
   </p><br>
 
   <p><%= form.submit %></p>
