--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -5,14 +5,23 @@
 
 <p>
   <strong>Level:</strong>
-  <%= @test.level %>
+  <%#= @test.level %>
+  <%= test_level(@test) %>
 </p>
 
-<p>
-  <% @questions.each do |question| %>
-    <%= question.body %><br>
-  <% end %>
-</p>
+<!--<p>-->
+  <%# @questions.each do |question| %>
+<!--    <%#= question.body %><br>-->
+  <%# end %>
+<!--</p>-->
+
+<h2>Questions</h2>
+
+<%= link_to 'New question', new_test_question_path(@test) %>
+
+<ol>
+  <%= render @test.questions %>
+</ol>
 
 <%= link_to 'Edit', edit_test_path(@test) %> |
 <%= link_to 'Back', tests_path %>
