--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,10 @@
   </head>
 
   <body>
-    <% if logged_in? %>
-      <p class="nav user">Welcome, <b><%= current_user.email %></b> Guru</p>
-      <%= link_to "Log out", logout_path, method: :delete %>
-    <% end %>
+    <%= render 'shared/nav' %>
 
     <%= yield %>
+
     <%= render 'shared/footer' %>
   </body>
 </html>
