Add before_action for resources, fix partial for tests

--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -20,7 +20,7 @@
 
   <p>
     <%= form.label :author_id%>
-    <%= form.collection_select :author_id, User.all, :id, :name, prompt: true %>
+    <%= form.collection_select :author_id, User.all, :id, :email, prompt: true %>
   </p>
 
   <p><%= form.submit %></p>
