--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -1,6 +1,6 @@
 <h1><%= test_header(@test) %></h1>
 
-<%= form_with model: @test, local: true do |form| %>
+<%= form_with model: [:admin, @test], local: true do |form| %>
   <%= render 'shared/errors', resource: @test %>
 
   <p>
@@ -18,12 +18,5 @@
     <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true %>
   </p>
 
-  <p>
-    <%= form.label :author_id%>
-    <%= form.collection_select :author_id, User.all, :id, :email, prompt: true %>
-  </p>
-
   <p><%= form.submit %></p>
 <% end %>
-
-<%= link_to 'Back', tests_path %>
