Add locale test for user and admin, add locale for test_passage

--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -2,10 +2,9 @@
 
 <table>
   <tr>
-    <th>Title</th>
-    <th>Level</th>
-    <th>Number of questions</th>
-    <th>Actions</th>
+    <th><%= t('.title_test') %></th>
+    <th><%= t('.level') %></th>
+    <th><%= t('.quantity') %></th>
   </tr>
 
   <%= render @tests %>
