--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>TestGuru</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -12,9 +15,13 @@
   <body>
     <%= render 'shared/nav' %>
 
-    <%= render 'shared/flash' %>
+    <div class="container">
 
-    <%= yield %>
+      <%= render 'shared/flash' %>
+
+      <%= yield %>
+
+    </div>
 
     <%= render 'shared/footer' %>
   </body>
