--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,11 +1,19 @@
 <h1><%= t('.header') %></h1>
 
-<table>
-  <tr>
-    <th><%= t('.title_test') %></th>
-    <th><%= t('.level') %></th>
-    <th><%= t('.quantity') %></th>
-  </tr>
-
-  <%= render @tests %>
-</table>
+<div class="table-responsive">
+  <div class="col col-md-10">
+    <table class="table table-striped table-hover">
+      <thead class="thead-dark">
+        <tr>
+          <th><%= t('.title_test') %></th>
+          <th><%= t('.level') %></th>
+          <th><%= t('.quantity') %></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <%= render @tests %>
+      </tbody>
+    </table>
+  <div class="col col-md-10">
+</div>
