--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,3 +1,5 @@
 <% flash.each do |key, message| %>
-  <%= content_tag :p, message, class: "flash #{key}" %>
+  <div class="<%= flash_class(key) %>">
+    <%= message %>
+  </div>
 <% end %>
