Add link in nav for admin to admin panel

--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -1,7 +1,6 @@
-
   <nav class="navbar navbar-light bg-info" >
       <span class="nav-admin title">
-        <%= link_to 'TestGuru', root_path %> | <%= t('.admin_panel') %>
+        <%= link_to 'TestGuru', root_path, class: 'navbar-brand' %>| <%= t('.admin_panel') %>
       </span>
 
     <div class="nav-admin user">
@@ -9,4 +8,3 @@
       <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
     </div>
   </nav>
-
