--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,12 +2,20 @@
   <%= link_to 'TestGuru', root_path, class: 'navbar-brand' %>
 
   <span class="navbar-text">
-    <% if user_signed_in? %>
-      <%= t('welcome_html', user_name: current_user.first_name)  %> Guru |
+
+    <% if user_signed_in? && current_user.admin? %>
+      <%= link_to t('.admin_panel'), admin_tests_path %>
+      <%= t('welcome_html', user_name: current_user.first_name) %> Guru |
       <%= link_to t('.log_out'), destroy_user_session_path, method: :delete %>
+
+    <% elsif user_signed_in? %>
+      <%= t('welcome_html', user_name: current_user.first_name) %> Guru |
+      <%= link_to t('.log_out'), destroy_user_session_path, method: :delete %>
+
     <% else %>
       <%= link_to t('.log_in'), new_session_path(resource_name) %> |
       <%= link_to t('.sign_up'), new_registration_path(resource_name) %>
     <% end %>
+
   </span>
 </nav>
