--- a/app/views/admin/gists/index.html.erb
+++ b/app/views/admin/gists/index.html.erb
@@ -1,18 +1,16 @@
-<h1><%= t('.header') %></h1>
-
 <div class="table-responsive">
   <div class="col col-md-10">
     <table class="table table-striped table-hover">
       <thead class="thead-dark">
         <tr>
-          <th><%= t('.title_test') %></th>
-          <th><%= t('.level') %></th>
-          <th><%= t('.quantity') %></th>
+          <th><%= t('.question') %></th>
+          <th><%= t('.url') %></th>
+          <th><%= t('.user') %></th>
           <th></th>
         </tr>
       </thead>
       <tbody>
-        <%= render @tests %>
+        <%= render @gists %>
       </tbody>
     </table>
   </div>
