--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |key, message| %>
   <div class="<%= flash_class(key) %>">
-    <%= message %>
+    <%= message.html_safe %>
   </div>
 <% end %>
