--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -7,7 +7,7 @@
 <table class="table" >
   <tr>
     <th class="sort-by-title pointer">
-      Title
+      <%= t('.title_test') %>
         <%= octicon 'arrow-up', class: 'text-success hide' %>
         <%= octicon 'arrow-down', class: 'text-success hide' %>
     </th>
