--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -4,9 +4,13 @@
   <%= link_to t('.new_test'), new_admin_test_path %>
 </p>
 
-<table>
+<table class="table">
   <tr>
-    <th><%= t('.title_test') %></th>
+    <th class="sort-by-title pointer">
+      <%= t('.title_test') %>
+      <%= octicon 'arrow-up', class: 'text-success hide' %>
+      <%= octicon 'arrow-down', class: 'text-success hide' %>
+    </th>
     <th><%= t('.level') %></th>
     <th><%= t('.quantity') %></th>
     <th colspan="3"><%= t('.actions') %></th>
