--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -5,7 +5,11 @@
     <table class="table table-striped table-hover">
       <thead class="thead-dark">
         <tr>
-          <th><%= t('.title_test') %></th>
+          <th class="sort-by-title pointer">
+          <%= t('.title_test') %>
+          <%= octicon 'arrow-up', class: 'text-success hide' %>
+          <%= octicon 'arrow-down', class: 'text-success hide' %>
+          </th>
           <th><%= t('.level') %></th>
           <th><%= t('.quantity') %></th>
           <th></th>
